@@ -1,6 +1,7 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - Use metacpan.org for the default links [RT 74090]
 
 1.102570  2010-09-14 16:49:38 Europe/Vienna
     - repo_web is optional; we can only determine the URL for github repos. If
